--- a/client/src/Pages/Profile/Components/ProfileData/Bio/Bio.css
+++ b/client/src/Pages/Profile/Components/ProfileData/Bio/Bio.css
@@ -6,7 +6,9 @@
 .bio-container {
   position: relative;
   border-top: 1px solid var(--shadow);
+  flex: 2;
 }
+
 .edit-bio-icon {
   position: absolute;
   right: 0;
